brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
• Queued follow-up messages                     
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› [PROMPT HERE]                      
                                                
  ? for shortcuts            100% context left
